--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-	<h1>Template H1</h1>
+	<h1>This is the H1</h1>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto unde necessitatibus, sunt doloremque et error vero delectus, dolore suscipit ducimus id dolorem ratione. Incidunt quae fugiat voluptates quo, libero odio?</p>
 	
 	<script type="text/javascript" src="./js/script.js"></script>
